--- a/package.json
+++ b/package.json
@@ -1,42 +1,55 @@
 {
   "name": "@djankies/eslint-config",
   "version": "1.0.0",
-  "description": "Shared ESLint configuration for djankies projects",
-  "main": "index.js",
-  "exports": {
-    ".": {
-      "import": "./eslint.config.ts",
-      "require": "./index.js"
-    },
-    "./eslint.config": "./eslint.config.ts",
-    "./configs/*": "./eslint-config/*.ts"
-  },
+  "description": "Comprehensive ESLint configuration for TypeScript and Next.js projects",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "eslint ."
+    "build:watch": "tsc --watch",
+    "clean": "rm -rf dist",
+    "lint": "eslint . --cache --config eslint.config.mjs",
+    "typecheck": "tsc --noEmit",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run clean && npm run build && npm run typecheck",
+    "test": "npm run lint && npm run typecheck"
   },
   "keywords": [
     "eslint",
     "config",
-    "djankies",
     "typescript",
-    "nextjs",
-    "react"
+    "nextjs"
   ],
-  "author": "",
+  "author": "djankies",
   "license": "MIT",
-  "peerDependencies": {
-    "eslint": "^9.0.0",
-    "typescript": "^5.0.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/djankies/eslint-config.git"
+  },
+  "bugs": {
+    "url": "https://github.com/djankies/eslint-config/issues"
+  },
+  "homepage": "https://github.com/djankies/eslint-config#readme",
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^20.11.0",
+    "jiti": "^2.5.1",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@eslint/compat": "*",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.35.0",
-    "@eslint/json": "^0.13.2",
+    "@eslint/js": "*",
+    "@graphql-eslint/eslint-plugin": "*",
     "@next/eslint-plugin-next": "15.5.3",
-    "@stylistic/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.43.0",
-    "@typescript-eslint/parser": "^8.44.0",
+    "@stylistic/eslint-plugin": "*",
+    "@typescript-eslint/eslint-plugin": "*",
+    "@typescript-eslint/parser": "*",
+    "eslint": "^9.15.0",
     "eslint-config-next": "15.5.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
@@ -49,6 +62,7 @@
     "eslint-plugin-jsonc": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-n": "^17.23.1",
+    "eslint-plugin-no-comments": "^1.1.10",
     "eslint-plugin-no-unsanitized": "^4.1.4",
     "eslint-plugin-perfectionist": "^4.15.0",
     "eslint-plugin-prettier": "^5.5.4",
@@ -56,7 +70,6 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-regexp": "^2.10.0",
-    "eslint-plugin-sql": "^3.2.2",
     "eslint-plugin-tailwindcss": "^3.18.2",
     "eslint-plugin-testing-library": "^6.4.0",
     "eslint-plugin-unicorn": "^61.0.2",
@@ -64,23 +77,29 @@
     "eslint-plugin-vitest": "^0.5.4",
     "eslint-plugin-yml": "^1.18.0",
     "eslint-plugin-zod": "^1.4.0",
-    "jsonc-eslint-parser": "^2.4.0",
-    "prettier": "^3.6.2",
-    "typescript-eslint": "^8.44.0",
-    "yaml-eslint-parser": "^1.3.0"
-  },
-  "devDependencies": {
-    "eslint": "^9.15.0",
-    "typescript": "^5.7.3"
+    "esprint": "^3.6.0",
+    "globals": "^15.12.0",
+    "jsonc-eslint-parser": "*",
+    "typescript-eslint": "*",
+    "yaml-eslint-parser": "*"
   },
   "files": [
-    "eslint.config.ts",
-    "eslint-config",
-    "index.js",
-    "index.d.ts"
+    "dist/**/*",
+    "src/**/*",
+    "!**/*.test.*",
+    "!**/*.spec.*"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/djankies/eslint-config.git"
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./plugins": {
+      "import": "./dist/plugins.js",
+      "types": "./dist/plugins.d.ts"
+    }
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
