--- a/package.json
+++ b/package.json
@@ -71,10 +71,10 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-regexp": "^2.10.0",
     "eslint-plugin-tailwindcss": "^3.18.2",
-    "eslint-plugin-testing-library": "^6.4.0",
+    "eslint-plugin-testing-library": "^7.8.0",
     "eslint-plugin-unicorn": "^61.0.2",
     "eslint-plugin-unused-imports": "^4.2.0",
-    "eslint-plugin-vitest": "^0.5.4",
+    "@vitest/eslint-plugin": "^1.3.12",
     "eslint-plugin-yml": "^1.18.0",
     "eslint-plugin-zod": "^1.4.0",
     "esprint": "^3.6.0",
