--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-de-morgan": "^1.3.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-json": "^4.0.1",
     "eslint-plugin-jsonc": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
