--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@djankies/eslint-config",
-  "version": "2.0.5",
+  "version": "2.1.0",
   "description": "Comprehensive ESLint configuration for TypeScript and Next.js projects",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -59,6 +59,7 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-markdown": "^5.1.0",
+    "eslint-plugin-markdownlint": "^0.9.0",
     "eslint-plugin-json": "^4.0.1",
     "eslint-plugin-jsonc": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
