--- a/package.json
+++ b/package.json
@@ -1,44 +1,7 @@
 {
-  "name": "@djankies/eslint-config",
-  "version": "2.1.0",
-  "description": "Comprehensive ESLint configuration for TypeScript and Next.js projects",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "type": "module",
-  "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc --watch",
-    "clean": "rm -rf dist",
-    "lint": "eslint . --cache --config eslint.config.mjs",
-    "typecheck": "tsc --noEmit",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm run clean && npm run build && npm run typecheck",
-    "test": "npm run lint && npm run typecheck"
-  },
-  "keywords": [
-    "eslint",
-    "config",
-    "typescript",
-    "nextjs"
-  ],
   "author": "djankies",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/djankies/eslint-config.git"
-  },
   "bugs": {
     "url": "https://github.com/djankies/eslint-config/issues"
-  },
-  "homepage": "https://github.com/djankies/eslint-config#readme",
-  "publishConfig": {
-    "access": "public"
-  },
-  "devDependencies": {
-    "@types/eslint": "^9.6.1",
-    "@types/node": "^24.5.2",
-    "jiti": "^2.5.1",
-    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@eslint/compat": "*",
@@ -49,6 +12,7 @@
     "@stylistic/eslint-plugin": "*",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
+    "@vitest/eslint-plugin": "^1.3.12",
     "eslint": "^9.15.0",
     "eslint-config-next": "15.5.3",
     "eslint-config-prettier": "^10.1.8",
@@ -58,11 +22,10 @@
     "eslint-plugin-de-morgan": "^1.3.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-markdown": "^5.1.0",
-    "eslint-plugin-markdownlint": "^0.9.0",
     "eslint-plugin-json": "^4.0.1",
     "eslint-plugin-jsonc": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-n": "^17.23.1",
     "eslint-plugin-no-comments": "^1.1.10",
     "eslint-plugin-no-unsanitized": "^4.1.4",
@@ -76,7 +39,6 @@
     "eslint-plugin-testing-library": "^7.8.0",
     "eslint-plugin-unicorn": "^61.0.2",
     "eslint-plugin-unused-imports": "^4.2.0",
-    "@vitest/eslint-plugin": "^1.3.12",
     "eslint-plugin-yml": "^1.18.0",
     "eslint-plugin-zod": "^1.4.0",
     "esprint": "^3.6.0",
@@ -85,12 +47,16 @@
     "typescript-eslint": "*",
     "yaml-eslint-parser": "*"
   },
-  "files": [
-    "dist/**/*",
-    "src/**/*",
-    "!**/*.test.*",
-    "!**/*.spec.*"
-  ],
+  "description": "Comprehensive ESLint configuration for TypeScript and Next.js projects",
+  "devDependencies": {
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^24.5.2",
+    "jiti": "^2.5.1",
+    "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -101,7 +67,42 @@
       "types": "./dist/plugins.d.ts"
     }
   },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "files": [
+    "dist/**/*",
+    "src/**/*",
+    "!**/*.test.*",
+    "!**/*.spec.*"
+  ],
+  "homepage": "https://github.com/djankies/eslint-config#readme",
+  "keywords": [
+    "eslint",
+    "config",
+    "typescript",
+    "nextjs"
+  ],
+  "license": "MIT",
+  "main": "dist/index.js",
+  "name": "@djankies/eslint-config",
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/djankies/eslint-config.git"
+  },
+  "scripts": {
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "clean": "rm -rf dist",
+    "lint": "eslint . --cache --config eslint.config.mjs",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run clean && npm run build && npm run typecheck",
+    "test": "npm run lint && npm run typecheck",
+    "typecheck": "tsc --noEmit",
+    "validate": "node validate-config.mjs",
+    "validate:test": "npm run build && npm run validate"
+  },
+  "type": "module",
+  "types": "dist/index.d.ts",
+  "version": "2.2.0"
 }
